<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bj"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="143dp"
            android:layout_height="123dp"
            android:background="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_your_account"
            android:textColor="#12aaeb"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN YOUR ACCOUNT"
            android:textColor="#353f50"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView2_0"
            android:layout_width="288dp"
            android:layout_height="12dp"
            android:background="@drawable/lin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_bg_user"
                android:gravity="center"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/username" />

                <EditText
                    android:id="@+id/activity_log_edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:textColor="#FFFFFF" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_bg_user"
                android:gravity="center"
                android:padding="6dp" >

                <TextView
                    android:id="@+id/textView2_6"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/pwd" />

                <EditText
                    android:id="@+id/activity_log_edt_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/activity_log_bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/login_ok"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/login_on"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/activity_log_tv_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="注册 "
            android:textColor="#80c9eb" />

        <TextView
            android:id="@+id/activity_log_tv_wjmm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="忘记密码?"
            android:textColor="#80c9eb" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center|bottom" >

        <TextView
            android:id="@+id/activity_register_bt_register1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="Copyright © 2015 比盟"
            android:textColor="#cccccc" />
    </RelativeLayout>

</LinearLayout>