<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eae8e8"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/bar_color"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/activity_yzlist_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/fragment_yuezhan_my"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/common_tab_bg" >

            <TextView
                android:id="@+id/fragment_yuezhan_wode_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@drawable/poeple2"
                android:textColor="#FFFFFF" />

            <!-- 我的钱包数据发生变化 -->

            <TextView
                android:id="@+id/fragment_yuezhan_msg_number"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/unread_count_bg"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fragment_change_main_store"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/common_tab_bg" >

            <TextView
                android:id="@+id/fragment_yuewan_test_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/change_branch"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="35dip"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:gravity="center" >

                <View
                    android:id="@+id/v_dot0"
                    style="@style/dot_style"
                    android:background="@drawable/dot_focused" />

                <View
                    android:id="@+id/v_dot1"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot2"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot3"
                    style="@style/dot_style" />

                <View
                    android:id="@+id/v_dot4"
                    style="@style/dot_style" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#f5f5f5"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/fragment_yuezhan_lin_fq"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/fragment_yuezhan_bt_fq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/launch_ball_games"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#c6c6c6" />

        <LinearLayout
            android:id="@+id/lLyout_my_ball_games"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/tv_my_ball_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_ball_games"
                android:textSize="15sp" />
            <!-- 红点提示 -->
            <!-- 有我未查看的参与我发起的开黑人数 -->

            <TextView
                android:id="@+id/fragment_yuezhan_fq_num"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginBottom="9dp"
                android:layout_marginRight="1dp"
                android:background="@drawable/unread_count_bg"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#c6c6c6" />

        <LinearLayout
            android:id="@+id/fragment_yuezhan_lin_zhudian"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:id="@+id/fragment_yuezhan_zhudian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_main_store"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- 下拉刷新列表 -->

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/id_swipe_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ListView
            android:id="@+id/listview_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>